Updated Navbar Insights
- I changed the Blog menu to Insight and added a drop-down menu under it namely Blogs and Testimonials.
- WIP: Create a general page "Insight" where you can access both Blogs and Testimonials in one page.
-  WIP: Create separate and more profound page for each Blogs and Testimonials.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -69,65 +69,80 @@
                                                 <li class="nav-item">
                                                     <a class="nav-link" href="@Url.Action("SMM", "Home")">Social Media Management</a>
                                             </ul>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="@Url.Action("WebDesign", "Home")">
-                                                    Web Design and Development
-                                                </a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="@Url.Action("POS", "Home")">
-                                                    Point of Sale (POS) Design and Development
-                                                </a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="/about-2/">
-                                                    Outsourcing Solutions
-                                                </a>
-                                            </li>
-</li>
-
-                                    </ul>
-                                </li>
-                                <!-- Product Menu Item with Dropdown -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/#">
-                                        Product
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                            <polyline points="6 9 12 15 18 9"></polyline>
-                                        </svg>
-                                    </a>
-                                    <ul class="dropdown-menu">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="@Url.Action("Ecommerce", "Home")">
-                                                Gym Equipment
+                                            <a class="nav-link" href="@Url.Action("WebDesign", "Home")">
+                                                Web Design and Development
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="@Url.Action("Software", "Home")">
-                                                Software
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                                    <polyline points="9 6 15 12 9 18"></polyline>
-                                                </svg>
+                                            <a class="nav-link" href="@Url.Action("POS", "Home")">
+                                                Point of Sale (POS) Design and Development
                                             </a>
                                         </li>
-                                    </ul>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/about-2/">
+                                                Outsourcing Solutions
+                                            </a>
+                                        </li>
                                 </li>
 
-                                <!-- Rental Menu -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="@Url.Action("Rental", "Home")">
-                                        Real Estate
-                                    </a>
-                                </li>
-                                <!-- Blog Menu -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="@Url.Action("Blog", "Home")">
-                                        Blog
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="@Url.Action("About", "Home")">About Us</a>
-                                </li>
+                            </ul>
+                            </li>
+                            <!-- Product Menu Item with Dropdown -->
+                            <li class="nav-item">
+                                <a class="nav-link" href="/#">
+                                    Product
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                        <polyline points="6 9 12 15 18 9"></polyline>
+                                    </svg>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="@Url.Action("Ecommerce", "Home")">
+                                            Gym Equipment
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="@Url.Action("Software", "Home")">
+                                            Software
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                                <polyline points="9 6 15 12 9 18"></polyline>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+
+                            <!-- Rental Menu -->
+                            <li class="nav-item">
+                                <a class="nav-link" href="@Url.Action("Rental", "Home")">
+                                    Real Estate
+                                </a>
+                            </li>
+                            <!-- Insights Menu -->
+                            <li class="nav-item">
+                                <a class="nav-link" href="@Url.Action("Insights", "Home")">
+                                    Insights
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                        <polyline points="6 9 12 15 18 9"></polyline>
+                                    </svg>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="@Url.Action("Blogs", "Home")">
+                                            Blogs
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="@Url.Action("Testimonials", "Home")">
+                                            Testimonials
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="@Url.Action("About", "Home")">About Us</a>
+                            </li>
                             </ul>
                         </div>
                         <div class="others-option">
