--- a/Content/css/styles.css
+++ b/Content/css/styles.css
@@ -24033,7 +24033,7 @@ label {
 
 .section-title {
     text-align: center;
-    margin-top: 200px;
+    margin-top: 100px;
     margin-bottom: 50px
 }
 
@@ -39195,4 +39195,10 @@ th {
 .star-rating {
     color: #ffd700; /* Star color */
     font-size: 24px;
+}
+
+/* Custom Styles*/
+
+.mb-10 {
+    margin-bottom: 10rem !important
 }
