--- a/Views/Home/SoftDesignAndDev.cshtml
+++ b/Views/Home/SoftDesignAndDev.cshtml
@@ -9,8 +9,7 @@
         <div class="ml-main-banner">
             <div class="container-fluid">
                 <div class="section-title" style="margin-top: 100px">
-                    <h1 class="font-weight-bold">Web Design and Development Services</h1>
-                    <h3>Transforming Your Ideas into Beautiful and Functional Websites</h3>
+                    <h1 class="font-weight-bold">Design and Development Services</h1>
                     <a class="btn btn-secondary mt-5" href="/contact/">Get Started</a>
                 </div>
             </div>
