--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -36,7 +36,7 @@
             <div class="col-lg-6 col-md-12">
                 <div class="about-content">
                     <div class="section-title">
-                        <h2>About Us</h2>
+                        <h2>About Us Trial</h2>
                         <div class="bar"></div>
                         <p>At Future Craft Digital, we are a dynamic and forward-thinking company based in the Philippines. Our primary focus is on providing exceptional outsourcing, marketing, web design, point of sale system solutions, and expertise in the leasing and real estate industry. We pride ourselves on delivering innovative and tailored services to help businesses thrive in today's competitive landscape.</p>
                     </div>
