Updated Home + Blogs Page
- I added a 'See all' button at the blog section in the Home page.
-  I added initial contents in the Blog page.
- Insight and Testimonial pages are now working and routing to the right pages.

WIP
- Make the Blog Page. Make it dynamic and can route to another page.

--- a/Views/Home/Blogs.cshtml
+++ b/Views/Home/Blogs.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Blogs";
 }
 
 
@@ -8,7 +8,8 @@
     <div class="d-table">
         <div class="d-table-cell">
             <div class="container">
-                <h1>About Us</h1>
+                <h1 class="font-weight-bold">The News from Our Blog</h1>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
             </div>
         </div>
     </div>
@@ -23,62 +24,109 @@
     <div class="shape8 rotateme"><img src="~/assets/img/shape2.svg" alt="shape"></div>
 </div>
 <!-- End Page Title -->
-<!-- Start About Area -->
-<div class="about-area ptb-80">
+<!-- Start Blog Area -->
+<div class="blog-area pt-80 pb-50">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-6 col-md-12">
-                <div class="about-image">
-                    <img src="~/assets/img/about4.png" alt="image">
+        <div class="row justify-content-center">
+            <div class="col-lg-4 col-md-6">
+                <div class="single-blog-post">
+                    <div class="blog-image">
+                        <a href="/blog-details/">
+                            <img src="../assets/img/blog-image/blog1.jpg" alt="image" />
+                        </a>
+                        <div class="date">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                                <line x1="16" y1="2" x2="16" y2="6"></line>
+                                <line x1="8" y1="2" x2="8" y2="6"></line>
+                                <line x1="3" y1="10" x2="21" y2="10"></line>
+                            </svg>
+                            March 15, 2021
+                        </div>
+                    </div>
+                    <div class="blog-post-content">
+                        <h3>
+                            <a href="/blog-details/">The Security Risks of Changing Package Owners</a>
+                        </h3>
+                        <span>
+                            By <a href="#">Admin</a>
+                        </span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse.</p>
+                        <a class="read-more-btn" href="/blog-details/">
+                            Read More
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <line x1="5" y1="12" x2="19" y2="12"></line>
+                                <polyline points="12 5 19 12 12 19"></polyline>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
             </div>
-
-            <div class="col-lg-6 col-md-12">
-                <div class="about-content">
-                    <div class="section-title">
-                        <h2>About Us</h2>
-                        <div class="bar"></div>
-                        <p>At Future Craft Digital, we are a dynamic and forward-thinking company based in the Philippines. Our primary focus is on providing exceptional outsourcing, marketing, web design, point of sale system solutions, and expertise in the leasing and real estate industry. We pride ourselves on delivering innovative and tailored services to help businesses thrive in today's competitive landscape.</p>
+            <div class="col-lg-4 col-md-6">
+                <div class="single-blog-post">
+                    <div class="blog-image">
+                        <a href="/blog-details/">
+                            <img src="../assets/img/blog-image/blog2.jpg" alt="image" />
+                        </a>
+                        <div class="date">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                                <line x1="16" y1="2" x2="16" y2="6"></line>
+                                <line x1="8" y1="2" x2="8" y2="6"></line>
+                                <line x1="3" y1="10" x2="21" y2="10"></line>
+                            </svg>
+                            March 17, 2021
+                        </div>
                     </div>
-
-                    <p>
-                        Whether you're a small startup or a large enterprise, we are committed to understanding your unique business needs and providing customized solutions that align with your goals. Partner with Future Craft Digital and experience a new level of success in outsourcing, marketing, web design, point of sale systems, and leasing and real estate.
-                        Contact us today to explore how Future Craft Digital can empower your business and propel it towards a brighter future. Let's embark on this exciting journey together!
-                    </p>
-
-                    <p>As a new company, we are excited about the future and the opportunities that lie ahead. We are constantly learning, adapting, and exploring new avenues to stay at the forefront of the digital industry. We are committed to exceeding client expectations, delivering exceptional value, and making a positive impact on the businesses we serve.</p>
+                    <div class="blog-post-content">
+                        <h3>
+                            <a href="/blog-details/">Tips to Protecting Your Business and Family</a>
+                        </h3>
+                        <span>
+                            By <a href="/it-startup/#">Smith</a>
+                        </span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse.</p>
+                        <a class="read-more-btn" href="/blog-details/">
+                            Read More
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <line x1="5" y1="12" x2="19" y2="12"></line>
+                                <polyline points="12 5 19 12 12 19"></polyline>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
-
-        <div class="about-inner-area">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="about-text">
-                        <h3>Our History</h3>
-                        <p>
-                            Future Craft Digital was founded in 2023 with a vision to revolutionize the digital landscape and empower businesses to thrive in the digital age. Although we are a new company, our team brings a wealth of experience and expertise in web design, development, branding, and digital marketing.
-
-                            Since our inception, we have been driven by a passion for digital innovation and a commitment to delivering outstanding results for our clients. We have already had the privilege of working with several forward-thinking businesses, helping them establish their online presence and achieve measurable success in their digital initiatives.
-                        </p>
+            <div class="col-lg-4 col-md-6">
+                <div class="single-blog-post">
+                    <div class="blog-image">
+                        <a href="/blog-details/">
+                            <img src="../assets/img/blog-image/blog3.jpg" alt="image" />
+                        </a>
+                        <div class="date">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                                <line x1="16" y1="2" x2="16" y2="6"></line>
+                                <line x1="8" y1="2" x2="8" y2="6"></line>
+                                <line x1="3" y1="10" x2="21" y2="10"></line>
+                            </svg>
+                            March 19, 2021
+                        </div>
                     </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="about-text">
-                        <h3>Our Mission</h3>
-                        <p>At Future Craft Digital, our mission is to create transformative digital solutions that drive growth and success for our clients. We are dedicated to staying at the forefront of technological advancements and utilizing the latest digital strategies to help businesses thrive in an ever-evolving digital landscape. We strive to deliver superior results by combining creativity, expertise, and a deep understanding of our clients' unique needs.</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-0 offset-md-3 offset-sm-3">
-                    <div class="about-text">
-                        <h3>Who we are</h3>
-                        <p>
-                            We are a diverse group of web designers, developers, marketers, and strategists, united by our shared commitment to excellence and our love for all things digital.
-
-                            What sets us apart is our unwavering focus on understanding our clients' unique needs and goals. We believe that every business has its own story, its own challenges, and its own aspirations. By taking the time to listen and truly understand our clients, we are able to create tailor-made solutions that resonate with their target audience and deliver tangible results.
-                        </p>
+                    <div class="blog-post-content">
+                        <h3>
+                            <a href="/blog-details/">Protect Your Workplace from Cyber Attacks</a>
+                        </h3>
+                        <span>
+                            By <a href="/it-startup/#">John</a>
+                        </span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse.</p>
+                        <a class="read-more-btn" href="/blog-details/">
+                            Read More
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <line x1="5" y1="12" x2="19" y2="12"></line>
+                                <polyline points="12 5 19 12 12 19"></polyline>
+                            </svg>
+                        </a>
                     </div>
                 </div>
             </div>
