--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -536,6 +536,9 @@
         <img src="../assets/img/shape4.svg" alt="shape" />
     </div>
 </div>
+
+@* START OF BLOGS *@
+
 <div class="blog-area pt-80 pb-50">
     <div class="container">
         <div class="section-title">
@@ -647,8 +650,14 @@
                 </div>
             </div>
         </div>
+        <!-- "See all" button -->
+        <div class="col-lg-12 d-flex justify-content-center mt-2">
+            <a href="@Url.Action("Blogs", "Home")" class="btn btn-primary btn-lg">See All</a>
+        </div>
     </div>
 </div>
+
+@*END OF BLOG*@
 
 @* Table of Contents *@
 <section class="toc-area ptb-80">
