--- a/Views/Home/Insights.cshtml
+++ b/Views/Home/Insights.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Insights";
 }
 
 
@@ -8,7 +8,7 @@
     <div class="d-table">
         <div class="d-table-cell">
             <div class="container">
-                <h1>About Us</h1>
+                <h1>Insights</h1>
             </div>
         </div>
     </div>
